--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	mavenLocal();
 }
 
 ext {
@@ -18,6 +19,8 @@ ext {
 }
 
 dependencies {
+	//Import commons domain dependency
+	compile group: 'com.hashanr.microservices', name: 'Mobile-Info-Commons' , version: '2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
