--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ security:
     client:
       client-id: mobile
       client-secret: pin
-      user-authorization-uri: http://localhost:9191/oauth/authorize
-      access-token-uri: http://localhost:9191/oauth/token
+      user-authorization-uri: http://${AUTH_SERVER}/oauth/authorize
+      access-token-uri: http://${AUTH_SERVER}/oauth/token
     resource:
-      token-info-uri: http://localhost:9191/oauth/check_token
+      token-info-uri: http://${AUTH_SERVER}/oauth/check_token
       
