--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ ext {
 }
 
 dependencies {
+
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-kubernetes
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-kubernetes', version: '1.1.2.RELEASE'
 	//Import commons domain dependency
 	compile group: 'com.hashanr.microservices', name: 'Mobile-Info-Commons' , version: '4.0'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
